# TranslatorHoi4

./: .env  .gitignore  LICENSE  README.md  README_EN.md  README_RU.md  build.py  build_macos.py  nuitka.conf  pyproject.toml  requirements.txt  test_translation.py  translatorhoi4-macos.spec  translatorhoi4.spec  translatorhoi4_settings.json  задачи для апдейта 1.2.txt
.github/workflows/: build.yml  release.yml
docs/: adding-providers.md  api.md  user-guide.md
packaging/: build-setup.ps1  create-appimage.sh  create-deb.sh  create-rpm.sh  setup-ccache.sh  show-ccache-stats.sh  translatorhoi4-setup.iss
tests/: test_cache.py  test_cost_tracker.py  test_engine_performance.py  test_env.py  test_mask.py  test_parser.py  test_settings_storage.py  test_sqlite_cache.py  test_validation.py
translatorhoi4/: __init__.py  _build_meta.py  app.py
translatorhoi4/.translatorhoi4_data/: cost_tracking.json
translatorhoi4/parsers/: paradox_yaml.py
translatorhoi4/translator/: backends.py  cache.py  config.py  cost.py  engine.py  game_profiles.py  glossary.py  mask.py  prompts.py  registry.py  sqlite_cache.py
translatorhoi4/translator/backends/: __init__.py  anthropic_backend.py  base.py  deepl.py  (+12 more)
translatorhoi4/ui/: about.py  base_interface.py  language_options.py  main_window.py  provider_selector.py  review_window.py  theme.py  translations.py  tray_popup.py  ui_components.py  ui_interfaces.py  ui_threads.py
translatorhoi4/utils/: env.py  fs.py  log.py  logging_config.py  provider_config.py  provider_settings.py  settings.py  update_checker.py  validation.py  version.py
(+10 files in other folders)
