[project]
name = "translatorhoi4"
version = "1.5"
description = "Cross-platform Paradox localisation translator (HOI4/CK3/EU4/Stellaris) with AI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Locon213" }]

[tool.pytest.ini_options]
pythonpath = ["."]
